feat: Add image for lasagna

--- a/recipes/mixed-vegetable-curry.html
+++ b/recipes/mixed-vegetable-curry.html
@@ -48,7 +48,7 @@
             through cooking time, and make sure the pan isn't too dry. If vegetables
             are sticking, add 1 or 2 tablespoons water, replace the lid, and continue
             cooking. Taste; season with salt. </li>
-        <li></li>
+        <li>Garnish with chopped cilantro. Serve warm, with naan, or similar flatbread.</li>
     </ol>
 </body>
 
