fix: Add recipe for lasagna to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/mixed-vegetable-curry.html">Mixed Vegetable Curry</a>
+    <a href="./recipes/lasagna.html">World's Best Lasagna</a>
 </body>
 </html>
