--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,7 +13,121 @@
     <p>This lasagna recipe takes a little work, but it is so satisfying
         and filling that it's worth it!</p>
     <p> Submitted by <b>John Chandler</b> </p>
-    <img src="../images/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" width="500" alt="Image of Lasagna">
+    <img src="../images/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" width="500"
+        alt="Image of Lasagna">
+    <h2>How to Make Lasagna</h2>
+    <p>Making lasagna can be time-consuming, but the results are well worth the
+        wait. You'll find a detailed ingredient list and step-by-step
+        instructions in the recipe below, but let's go over the basics: </p>
+    <h2>Lasagna Ingredients</h2>
+    <p>this lasagna recipe because it's incredibly customizable, so you can
+        easily alter the ingredient list to suit your needs. If you want to
+        stay true to the original recipe, though, these are the ingredients
+        you'll need to add to your grocery list: </p>
+    <ul>
+        <li><strong>Meat: </strong>This super meaty lasagna has sweet Italian
+            sausage and lean ground beef.</li>
+        <li><strong>Onion and garlic: </strong>An onion and two cloves of garlic
+            are cooked with the meat to add tons of flavor.</li>
+        <li><strong>Tomato products: </strong>You'll need a can of crushed
+            tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+        <li><strong>Sugar: </strong>Two tablespoons of white sugar add subtle
+            sweetness and enhance the flavor of the sauce.</li>
+        <li><strong>Spices and seasonings: </strong>This lasagna recipe is
+            flavored with fresh parsley, dried basil leaves, salt, Italian
+            seasoning, fennel seeds, and black pepper.</li>
+        <li><strong>Lasagna noodles: </strong>Use store-bought or homemade lasagna noodles.</li>
+        <li><strong>Cheeses: </strong>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+        <li><strong>Egg: </strong>An egg helps bind the ricotta so it doesn't
+            ooze out of the lasagna when you cut into it.</li>
+    </ul>
+    <h2>How to Make Lasagna Step-By-Step</h2>
+    <p>Here's a very brief overview of what you can expect when you make homemade lasagna: </p>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
+    <h3>How to Layer Lasagna</h3>
+    The detailed layering instructions can be found in the recipe below, but this is the order you'll follow:
+    <ol>
+        <li>Meat sauce</li>
+        <li>Noodles</li>
+        <li>Ricotta mixture</li>
+        <li>Mozzarella slices</li>
+        <li>Meat sauce</li>
+        <li>Parmesan cheese</li>
+        <li>Repeat the layers, then top with the remaining Parmesan.</li>
+    </ol>
+    <h3>How Long to Cook Lasagna</h3>
+    <p>The assembled lasagna should take about 50 minutes to cook in an oven
+        preheated to 375 degrees F. Cover it with foil for the first 25 minutes,
+        then let it cook uncovered for the final 25 minutes. Also, it's important
+        to let the lasagna rest at room temperature for about 15 minutes before
+        you cut into it. </p>
+    <h3>How to Reheat Lasagna</h3>
+    <p>You can use the microwave to reheat lasagna if you're in a pinch or short
+        on time, but be aware that it will change the texture of the noodles. The
+        best way to reheat lasagna is in the oven. Simply cover the leftovers with
+        foil and bake at 350 degrees F for about half an hour, or until it's heated
+        through and the sauce is bubbly. </p>
+    <h3>How to Freeze Lasagna</h3>
+    <p>If you're planning to freeze lasagna, it's best to cook it in a foil baking dish. Allow the casserole to cool,
+        then cover the whole thing in at least one layer of storage wrap. Wrap it again in aluminum foil to prevent
+        freezer burn. Freeze for up to three months. </p>
+    <h5>How to Reheat Frozen Lasagna</h5>
+    <p>Thaw the frozen lasagna in the refrigerator overnight, then follow the reheating instructions above. If you don't
+        have time to thaw in the fridge, you can reheat it from frozen — just make sure to add a few minutes to the cook
+        time to ensure the dish is heated through.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>¾ pound lean ground beef</li>
+        <li>½ cup minced onion</li>
+        <li>cloves garlic, crushed</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>2 (6.5 ounce) cans canned tomato sauce</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>½ cup water</li>
+        <li>2 tablespoons white sugar</li>
+        <li>4 tablespoons chopped fresh parsley, divided</li>
+        <li>1 ½ teaspoons dried basil leaves</li>
+        <li>1 ½ teaspoons salt, divided, or to taste</li>
+        <li>1 teaspoon Italian seasoning</li>
+        <li>½ teaspoon fennel seeds</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>12 lasagna noodles</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>1 egg</li>
+        <li>¾ pound mozzarella cheese, sliced</li>
+        <li>¾ cup grated Parmesan cheese</li>
+    </ul>
+    <h2>Directions</h2>
+    <ul>
+        <li><b> Step 1: <br></b>Gather all your ingredients.</li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-01-1064-5dd7c3348e624ec2a266785d22dd52e3.jpg" width="500" alt="Image of all ingredients layed out on a table">
+        <li><b> Step 2: <br></b>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-01-1-1066-a60ebdd7ec5a40ed8754b1f4df8ff1f4.jpg" width="500" alt="Image of cooked sausage, ground beef, onion, and garlic in a Dutch oven">
+        <li><b> Step 3: <br></b> Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-02-1079-42d9226098f54647a6d052fc836d3a79.jpg" width="500" alt="Image of cooked tomato sauce">
+        <li><b> Step 4: <br></b>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-03-1065-3a965c2fd99344a7aee647cabc22f3a4.jpg" alt="Image of cooked pasta" width="500">
+        <li><b> Step 5: <br></b>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-04-1071-882506befd1744c0857897a6604c21da.jpg" alt="Image of cooked ricotta cheese" width="500">
+        <li><b> Step 6: <br></b>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li><b> Step 7: <br></b>To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-09-1077-69a136de5295490d9c072b8971b65848.jpg" alt="Image of layering the lasagna" width="500">
+        <li><b> Step 8: <br></b>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-11-1081-cc17503b338f465580ef6a42fe7ce80f.jpg" alt="Image of wrapping lasagna in foil" width="500">
+        <li><b> Step 9: <br></b>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-step-12-1164-f66803089cf547bf8470f06943bdc8c4.jpg" alt="Baked Lasagna" width="500">
+        <li><b> Step 10: <br></b>Rest lasagna for 15 minutes before serving. </li>
+        <img src="../images/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="served lasagna" width="500">
+    </ul>
+    
 </body>
 
 </html>
