--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Odin Recipes</title>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/mixed-vegetable-curry.html">Mixed Vegetable Curry</a>
-    <a href="./recipes/lasagna.html">World's Best Lasagna</a>
+    <ul>
+        <li><a href="./recipes/mixed-vegetable-curry.html">Mixed Vegetable Curry</a></li>
+        <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+    </ul>
 </body>
 </html>
