--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="./recipes/mixed-vegetable-curry.html">Mixed Vegetable Curry</a></li>
         <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="./recipes/carrot-halwa.html">Carrot Halwa</a></li>
     </ul>
 </body>
 </html>
